WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170447
<input type="range"> changing to disabled while active breaks all pointer events
https://bugs.webkit.org/show_bug.cgi?id=170447
Summary
<input type="range"> changing to disabled while active breaks all pointer events
Thomas Brierley
Reported
2017-04-04 04:04:15 PDT
Created
attachment 306168
[details]
Test Case Safari Version 10.1 (10603.1.30.0.34) This is an intentional duplicate of 82558 from 2012 which was fixed in the same year, but I cannot re-open. New test case included here in-case it's any different. If a native slider is disabled while the user is dragging, then other pointer events on the page will stop working from that point onward. In the following example, drag the slider to either end where it will be disabled, then attempt to click the button to get the alert. <!doctype html> <script> const input = (that) => { if (Math.abs(that.value - 50) === 50) { that.disabled = true; } }; </script> <input type="range" oninput="input(this)"> <button onclick="alert('Click')">Click</button>
Attachments
Test Case
(233 bytes, text/html)
2017-04-04 04:04 PDT
,
Thomas Brierley
no flags
Details
Patch
(9.22 KB, patch)
2017-04-05 10:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.67 KB, patch)
2017-04-05 10:27 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2017-04-04 17:33:59 PDT
Thank you for the report! Very surprising bug. Do you happen to know if this worked in Safari 10.0?
Radar WebKit Bug Importer
Comment 2
2017-04-04 17:34:26 PDT
<
rdar://problem/31442875
>
Chris Dumez
Comment 3
2017-04-05 10:17:46 PDT
Created
attachment 306294
[details]
Patch
Geoffrey Garen
Comment 4
2017-04-05 10:22:27 PDT
Comment on
attachment 306294
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306294&action=review
r=me
> LayoutTests/platform/ios/TestExpectations:1425 > +fast/forms/range/disabled-while-dragging.html [ Skip ]
Why skip?
Chris Dumez
Comment 5
2017-04-05 10:24:58 PDT
Comment on
attachment 306294
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306294&action=review
>> LayoutTests/platform/ios/TestExpectations:1425 >> +fast/forms/range/disabled-while-dragging.html [ Skip ] > > Why skip?
eventSender.mouseDown() / eventSender.mouseUp() / eventSender.mouseMoveTo() do not work on iOS. I can add a comment.
Chris Dumez
Comment 6
2017-04-05 10:27:42 PDT
Created
attachment 306296
[details]
Patch
Chris Dumez
Comment 7
2017-04-05 11:47:44 PDT
Comment on
attachment 306296
[details]
Patch Clearing flags on attachment: 306296 Committed
r214955
: <
http://trac.webkit.org/changeset/214955
>
Chris Dumez
Comment 8
2017-04-05 11:47:46 PDT
All reviewed patches have been landed. Closing bug.
Lucas Forschler
Comment 9
2019-02-06 09:18:31 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug