Source/WebCore/html/shadow/SliderThumbElement.cpp
@@ -349,7 +349,6 @@ void SliderThumbElement::defaultEventHandler(Event& event)
     // Missing this kind of check is likely to occur elsewhere if adding it in each shadow element.
     HTMLInputElement* input = hostInput();
     if (!input || input->isDisabledFormControl()) {
-        stopDragging();
         HTMLDivElement::defaultEventHandler(event);
         return;
     }
@@ -564,15 +563,20 @@ void SliderThumbElement::unregisterForTouchEvents()
     document().removeTouchEventHandler(*this);
     m_isRegisteredAsTouchEventListener = false;
 }
+#endif // ENABLE(IOS_TOUCH_EVENTS)
 
 void SliderThumbElement::disabledAttributeChanged()
 {
+    if (isDisabledFormControl())
+        stopDragging();
+
+#if ENABLE(IOS_TOUCH_EVENTS)
     if (shouldAcceptTouchEvents())
         registerForTouchEvents();
     else
         unregisterForTouchEvents();
+#endif
 }
-#endif // ENABLE(IOS_TOUCH_EVENTS)
 
 HTMLInputElement* SliderThumbElement::hostInput() const
 {
